<resources>
    <string name="app_name">EjercicioDos</string>
    <string name="title_activity_main">Ejercicio 2</string>
    <string name="title_bar">Ejercicio 2 - JSON</string>
    <string name="language_english">Ingles</string>
    <string name="add_student">Agregar nuevo estudiante</string>
    <string name="preview_students">Ver estudiantes</string>
    <string name="open_menu">Abrir</string>
    <string name="close_menu">Cerrar</string>
    <string name="student_number">Número de cuenta</string>
    <string name="student_number_hint">311123654-A</string>
    <string name="student_name">Nombre</string>
    <string name="student_last_name">Apellido</string>
    <string name="student_name_hint">John Doe</string>
    <string name="student_age">Edad</string>
    <string name="student_age_hint">18</string>
    <string name="student_assignatures">Materias</string>
    <string name="student_age_assignature_credits">10</string>
    <string name="student_assignature_hint">POO</string>
    <string name="add_assignature_button">Agregar otra materia</string>
    <string name="assignature_name">Nombre</string>
    <string name="search_students">Buscar estudiante</string>
    <string name="search_student_hint">A1</string>
    <string name="buscar">Buscar</string>
    <string name="delete_student">Borrar estudiante</string>
</resources>