<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.FormFragment">

    <TextView
        android:id="@+id/tvFormStudentIdTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/student_number"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/etStudentId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/student_number_hint"
        android:inputType="text"
        android:maxLines="1"
        android:minHeight="48dp"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFormStudentIdTitle"
        app:layout_constraintVertical_bias="0.0" />
    <TextView
        android:id="@+id/tvFormStudentIdTitle2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/student_name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etStudentId" />
    <EditText
        android:id="@+id/etStudentId2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/student_name_hint"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:minHeight="48dp"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFormStudentIdTitle2" />

    <TextView
        android:id="@+id/tvFormStudentAgeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/student_age"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etStudentId2" />

    <EditText
        android:id="@+id/etStudentAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/student_age_hint"
        android:inputType="number"
        android:maxLines="1"
        android:minHeight="48dp"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFormStudentAgeTitle" />

    <Button

        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_student"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etStudentAge" />


</androidx.constraintlayout.widget.ConstraintLayout>